--- a/site/index.html.html
+++ b/site/index.html.html
@@ -103,7 +103,7 @@
 
                         <p class="Geo1"><a href="http://fipi.ru/"target="_blank" class='Geo'>ФИПИ</a> - Один из лучших сайтов по подготовке к экзамену - Фипи. Он считается главным инструментом 11-классника, ибо здесь все есть.</p>
 
-                        <p class="Geo1"><a href="5-EGE.RU"target="_blank" class='Geo'>5-EGE.RU</a> - Удобный сайт с практическим материалом и полным каталогом заданий.</p>
+                        <p class="Geo1"><a href="https://alexlarin.net/ege20.html"target="_blank" class='Geo'>Ларин</a> - Удобный сайт с практическим материалом и полным каталогом заданий.</p>
                 </a>
                 </div>
             </div>
